data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_256.wast
;; 7. **Test Description**: Implement a loop with `nop` at the end, just before the looping back `br_if` condition.    - **Constraint**: Confirms that placing `nop` at various positions does not affect the looping back condition.    - **Relation to Infinite Loops**: Ensures the loop condition behaves as intended and does not cause continuous execution.

(assert_invalid
  (module
    (func $loop_with_nop
      (block $loop
        (loop $inner
          (nop)
          (br_if $inner (i32.const 1))
        )
      )
    )
  )
  "type mismatch"
)